--- a/package.json
+++ b/package.json
@@ -1,22 +1,65 @@
 {
-  "name": "outwave-solidity-hardhat",
+  "name": "outwave-solidity",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.6.4",
-    "hardhat": "^2.9.3"
-  },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.6.0"
-  }
+    "@openzeppelin/contracts": "4.4.2",
+    "@openzeppelin/contracts-upgradeable": "4.4.2",
+    "@openzeppelin/hardhat-upgrades": "1.16.1",
+    "@openzeppelin/test-helpers": "0.5.15",
+    "@openzeppelin/upgrades-core": "1.12.0",
+    "babel-eslint": "10.1.0",
+    "babel-polyfill": "6.26.0",
+    "babel-register": "6.26.0",
+    "bignumber.js": "9.0.2",
+    "cross-fetch": "3.1.5",
+    "debug": "4.3.4",
+    "eslint": "8.8.0",
+    "eslint-plugin-mocha": "10.0.4",
+    "eth-gas-reporter": "0.2.25",
+    "eth-sig-util": "2.5.4",
+    "ethers": "5.5.4",
+    "fs-extra": "10.0.1",
+    "hardhat": "2.8.0",
+    "hardhat-contract-sizer": "2.5.1",
+    "hardhat-erc1820": "0.1.0",
+    "hardhat-gas-reporter": "1.0.8",
+    "hardhat-storage-layout": "0.1.6",
+    "hardhat-tracer": "1.0.0-alpha.6",
+    "hardlydifficult-eth": "1.1.4",
+    "hardlydifficult-ethereum-contracts": "0.11.1",
+    "lint-staged": "12.3.7",
+    "prettier": "2.5.1",
+    "prompt": "1.2.2",
+    "solhint": "3.3.7",
+    "solidity-coverage": "0.7.21"
+  },
+  "devDependencies": {
+    "chai": "4.3.4",
+    "ethereum-waffle": "3.4.4",
+    "web3": "1.7.3"
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix"
+    ]
+  },
+  "scripts": {
+    "test": "hardhat test",
+    "clean": "rm -rf artifacts",
+    "lint:contracts": "solhint 'contracts/**/*.sol'",
+    "lint:code": "eslint --resolve-plugins-relative-to ../packages/eslint-config .",
+    "lint": "yarn lint:contracts && yarn lint:code",
+    "lintFix": "yarn lint:contracts --fix && yarn lint:code --fix",
+    "coverage": "hardhat coverage",
+    "dev": "yarn lint && yarn build && yarn test",
+    "ci": "yarn lint && yarn test",
+    "build": "hardhat compile",
+    "verify": "hardhat verify",
+    "hardhat": "hardhat",
+    "deploy-all": "hardhat deploy"
+  },
+  "author": "demind.io",
+  "license": "ISC"
 }
