--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "bignumber.js": "9.0.2",
     "cross-fetch": "3.1.5",
     "debug": "4.3.4",
-    "eslint": "8.8.0",
+    "eslint": "^7.32.0 || ^8.2.0",
     "eslint-plugin-mocha": "10.0.4",
     "eth-gas-reporter": "0.2.25",
     "eth-sig-util": "2.5.4",
@@ -43,13 +43,25 @@
   },
   "devDependencies": {
     "chai": "4.3.4",
-    "ethereum-waffle": "3.4.4",
-    "web3": "1.7.3",
-    "eslint": "8.10.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-prettier": "latest",
+    "ethereum-waffle": "3.4.4",
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
-    "prettier": "2.6.2"
+    "web3": "1.7.3",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-standard": "4.1.0",
+    "eslint-plugin-jest": "^26.2.2",
+    "@typescript-eslint/parser": "5.17.0",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "typescript": "4.6.2"
+
   },
   "lint-staged": {
     "*.{js,ts}": [
