--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "test": "hardhat test",
     "clean": "rm -rf artifacts",
     "lint:contracts": "solhint 'contracts/**/*.sol'",
-    "lint:code": "eslint --resolve-plugins-relative-to ../packages/eslint-config .",
+    "lint:code": "eslint .",
     "lint": "yarn lint:contracts && yarn lint:code",
     "lintFix": "yarn lint:contracts --fix && yarn lint:code --fix",
     "coverage": "hardhat coverage",
