--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "eslint-plugin-jest": "^26.2.2",
     "@typescript-eslint/parser": "5.17.0",
     "@typescript-eslint/eslint-plugin": "5.17.0",
-    "typescript": "4.6.2"
+    "typescript": "4.6.2",
+    "truffle-assertions": "0.9.2"
 
   },
   "lint-staged": {
