--- a/package.json
+++ b/package.json
@@ -42,25 +42,25 @@
     "solidity-coverage": "0.7.21"
   },
   "devDependencies": {
+    "@tenderly/hardhat-tenderly": "^1.0.13",
+    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "@typescript-eslint/parser": "5.17.0",
     "chai": "4.3.4",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-prettier": "latest",
-    "ethereum-waffle": "3.4.4",
-    "husky": "7.0.4",
-    "lint-staged": "12.3.7",
-    "web3": "1.7.3",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-standard": "16.0.3",
     "eslint-import-resolver-typescript": "2.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-jest": "^26.2.2",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "latest",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-standard": "4.1.0",
-    "eslint-plugin-jest": "^26.2.2",
-    "@typescript-eslint/parser": "5.17.0",
-    "@typescript-eslint/eslint-plugin": "5.17.0",
+    "ethereum-waffle": "3.4.4",
+    "husky": "7.0.4",
+    "lint-staged": "12.3.7",
+    "truffle-assertions": "0.9.2",
     "typescript": "4.6.2",
-    "truffle-assertions": "0.9.2"
-
+    "web3": "1.7.3"
   },
   "lint-staged": {
     "*.{js,ts}": [
