--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "2.0.5",
-    "@nomiclabs/hardhat-etherscan": "3.0.3",
+    "@nomiclabs/hardhat-etherscan": "3.1.0",
     "@nomiclabs/hardhat-truffle5": "2.0.5",
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@nomiclabs/hardhat-web3": "2.0.0",
     "@openzeppelin/contracts": "4.4.2",
     "@openzeppelin/contracts-upgradeable": "4.4.2",
-    "@openzeppelin/hardhat-upgrades": "1.16.1",
     "@openzeppelin/test-helpers": "0.5.15",
     "@openzeppelin/upgrades-core": "1.12.0",
     "@unlock-protocol/contracts": "^0.0.5",
@@ -25,7 +23,6 @@
     "eslint-plugin-mocha": "10.0.4",
     "eth-gas-reporter": "0.2.25",
     "eth-sig-util": "2.5.4",
-    "ethers": "5.5.4",
     "fs-extra": "10.0.1",
     "hardhat": "2.8.0",
     "hardhat-contract-sizer": "2.5.1",
@@ -42,6 +39,8 @@
     "solidity-coverage": "0.7.21"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@openzeppelin/hardhat-upgrades": "^1.20.0",
     "@tenderly/hardhat-tenderly": "^1.0.13",
     "@typescript-eslint/eslint-plugin": "5.17.0",
     "@typescript-eslint/parser": "5.17.0",
@@ -56,6 +55,7 @@
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-standard": "4.1.0",
     "ethereum-waffle": "3.4.4",
+    "ethers": "^5.7.1",
     "husky": "7.0.4",
     "lint-staged": "12.3.7",
     "truffle-assertions": "0.9.2",
