--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@nomiclabs/hardhat-web3": "2.0.0",
     "@openzeppelin/contracts": "4.4.2",
-    "@openzeppelin/contracts-upgradeable": "4.4.2",
+    "@openzeppelin/contracts-upgradeable": "^4.4.2",
     "@openzeppelin/test-helpers": "0.5.15",
     "@openzeppelin/upgrades-core": "1.12.0",
     "@unlock-protocol/contracts": "^0.0.5",
