--- a/package.json
+++ b/package.json
@@ -84,7 +84,8 @@
     "hardhat": "hardhat",
     "deploy-all": "hardhat deploy",
     "postinstall": "husky install",
-    "nuke": "./.scripts/nuke.sh"
+    "nuke": "./.scripts/nuke.sh",
+    "slither": "slither . --solc-remaps '@openzeppelin=node_modules/@openzeppelin --exclude naming-convetion,external-function,low-level-calls --buidler-ignore-compile"
   },
   "author": "demind.io",
   "license": "ISC"
