Adopt dotenv to separate configuration from app codebase

--- a/.gitignore
+++ b/.gitignore
@@ -15,10 +15,11 @@ artifacts
 /.openzeppelin
 /deployments
 /yarn.lock
-/accounts.optimisticGoerli.js
-/accounts.mumbai.js
-/accounts.optimismTest.js
-/etherscan.js
+# /accounts.optimisticGoerli.js
+# /accounts.mumbai.js
+# /accounts.optimismTest.js
+# /accounts.optimism.js
+# /etherscan.js
 
 /binaries
 /output
