Add arbitrum account and network configurations

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ LOCAL_MNEMONIC="test test test test test test test test test test test junk"
 OPTIMISM_MNEMONIC="test test test test test test test test test test test junk"
 OPTIMISMTEST_MNEMONIC="test test test test test test test test test test test junk"
 OPTIMISMGOERLI_MNEMONIC="test test test test test test test test test test test junk"
-POLYGONMUMBAI_ETHERSCANKEY="test test test test test test test test test test test junk"
-OPTIMISMGOERLI_ETHERSCANKEY="test test test test test test test test test test test junk"
+ARBITRUM_MNEMONIC="test test test test test test test test test test test junk"
+POLYGONMUMBAI_ETHERSCANKEY=""
+OPTIMISMGOERLI_ETHERSCANKEY=""
 OPTIMISM_PROVIDER="https://opt-mainnet.g.alchemy.com/v2/Db3tVIWDDMfLSmZNXwiwQZ2GCwbEj8VU"
 OPTIMISMTEST_PROVIDER="https://opt-mainnet.g.alchemy.com/v2/Db3tVIWDDMfLSmZNXwiwQZ2GCwbEj8VU"
 OPTIMISMGOERLI_PROVIDER="https://opt-goerli.g.alchemy.com/v2/xvmUe2COEAAcn_caQeRbtiDITCCZFyj1"
