Add arbitrum etherscan key setting

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@ OPTIMISMGOERLI_MNEMONIC="test test test test test test test test test test test 
 ARBITRUM_MNEMONIC="test test test test test test test test test test test junk"
 POLYGONMUMBAI_ETHERSCANKEY=""
 OPTIMISMGOERLI_ETHERSCANKEY=""
-OPTIMISM_PROVIDER="https://opt-mainnet.g.alchemy.com/v2/Db3tVIWDDMfLSmZNXwiwQZ2GCwbEj8VU"
-OPTIMISMTEST_PROVIDER="https://opt-mainnet.g.alchemy.com/v2/Db3tVIWDDMfLSmZNXwiwQZ2GCwbEj8VU"
-OPTIMISMGOERLI_PROVIDER="https://opt-goerli.g.alchemy.com/v2/xvmUe2COEAAcn_caQeRbtiDITCCZFyj1"
-POLYGONMUMBAI_PROVIDER="https://polygon-mumbai.g.alchemy.com/v2/IFm_wxxCk2b0TFTQwPjDK6QXWFDjxer_"
+ARBITRUM_ETHERSCANKEY=""
+OPTIMISM_PROVIDER=""
+OPTIMISMTEST_PROVIDER=""
+OPTIMISMGOERLI_PROVIDER=""
+POLYGONMUMBAI_PROVIDER=""
+ARBITRUM_PROVIDER=""
