--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@nomiclabs/hardhat-web3": "2.0.0",
     "@openzeppelin/contracts": "4.4.2",
     "@openzeppelin/contracts-ethereum-package": "^3.0.0",
-    "@openzeppelin/contracts-upgradeable": "^4.4.2",
+    "@openzeppelin/contracts-upgradeable": "4.7.3",
     "@openzeppelin/hardhat-upgrades": "1.16.1",
     "@openzeppelin/test-helpers": "0.5.15",
     "@openzeppelin/upgrades-core": "1.12.0",
